--- a/src/app/modules/counter/pages/counter/counter.component.html
+++ b/src/app/modules/counter/pages/counter/counter.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <section class="card">
-        <p>Contador atual: <strong>{{count$ | async}}</strong></p>
+        <p>CONTADOR ATUAL: <strong>{{count$ | async}}</strong></p>
     </section>
 
     <section class="content-row">
